save_session_to_db
